src/pages/StartPage/styles.scss
/* ... */
.fastPreview__tab_hide {
  animation: fadeOut .6s ease-in-out,
}

//////// ================================== ANIMATIONS


@keyframes elementSlowAppear {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes slowAppear{
  0% {opacity: 0}
  100%{ opacity: 1}
}

@keyframes buttonAppear {
  0% {
    color: rgba(0,0,0,0);

  }
  100% {
    color: rgba(255,255,255,1);

  }
}

@keyframes spanHeavyText {
  0% {color: rgba(0,0,0,0)}
  100% {color: rgba(243, 94, 255,1)}
}

@keyframes spanLightText {
  0% {color: rgba(0,0,0,0)}
  100% {color: rgba(94, 188, 255,1)}
}

////////////////////// media queries

@media only screen and (max-width: 1670px) {
  .StartPage__UI_tab {
    .StartPage__UI  {
      button, a {
        width: 250px;
      }
      
    }
    .StartPage__NewPageAnchors  {
      width: 150px;
    }
  }
  .StartComponent__holder {
    position: relative;
  
    
  }
}

@media only screen and (max-width: 1200px) {
  .StartComponent__TopUi {
    display: none;
  }
  .StartPage__UI_tab {
    .StartPage__UI  {
      flex-direction: column;
      gap: 30px;
      align-items: center;
      top: 50%;
      transform: translate(-50%, -50%);
      button, a {
        width:50%
      }
      .StartPage__UI_hidden {
        display: block;
      }
    }
    .StartPage__NewPageAnchors  {
      width: 120px;
    }
  }
  .StartComponent__holder {
  
    .App_particleDiv {
      left: 50% ;
      top: 23%;
      
    } 
    
  }
}


@media only screen and (max-width: 1100px) {
  .fastPreview__tab {
    .fastPreview__tab_display {
      display: none;
    }
    .fastPreview__tab_scroll {
      width: 100%;
      .fastPreview__tab_scrollContainer {

        .fastPreview__tab_item {
          padding: 30px;
          a {
            display: block;
          }
          .fastPreview__tab_itemImg {
            width: 70%;
            margin: auto;
          }
        }
      }
      
    }
  }
}


@media only screen and (max-width: 650px) {

  .fastPreview__tab {
    .fastPreview__tab_scroll {
      .fastPreview__tab_scrollContainer {
        .fastPreview__tab_item {
          padding: 10px;
          .fastPreview__tab_itemImg {
            width: 90%;
          }
        }
      }
      
    }
  }


  .StartPage__Footer {
    display: none;
  }
  .StartPage__UI_tab {
    
    .StartPage__UI  {
      flex-direction: column;
      gap: 30px;

      button, a {
        width:100%;
        background: $backgroundDarkColor;
      }
    }
    .StartPage__NewPageAnchors  {
      display: none;
    }

  }
  .StartComponent__holder {
  
    .App_particleDiv {
      left: 50% ;
      top: 23%;
      
    } 
    
  }
}

@media only screen and (max-width: 400px) {
  .fastPreview__tab {
    .fastPreview__tab_scroll {
      .fastPreview__tab_scrollContainer {
        .fastPreview__tab_item {
          padding: 5px;
          .fastPreview__tab_itemImg {
            width: 100%;
          }
        }
      }
      
    }
  }
}

